<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/convo_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="20dp"
                android:text="@string/name"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:scaleType="fitXY" />

            <TextView
                android:id="@+id/convo_message"
                android:text="@string/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/convo_name"
                android:layout_marginStart="20dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/album_title"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/convo_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/convo_message"
                android:text="@string/time"
                android:layout_marginStart="20dp"
                android:textSize="@dimen/songs_count"
                tools:ignore="SpUsage" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>