<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:padding="4dp"
            android:text="@string/dunamix_chat"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="40sp"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTitle"
            android:id="@+id/tvDes1"
            android:layout_marginStart="16dp"
            android:padding="4dp"
            android:text="@string/signup"
            android:textColor="@color/primaryTextColor"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:orientation="vertical"
            android:animateLayoutChanges="true"
            android:layout_below="@id/tvDes1"
            android:layout_marginStart="32dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/regEmailL"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email"
                android:textColorHint="@color/secondaryTextColor"
                app:boxCornerRadiusBottomEnd="24dp"
                app:boxCornerRadiusBottomStart="24dp"
                app:boxCornerRadiusTopEnd="24dp"
                app:boxCornerRadiusTopStart="24dp"
                app:boxStrokeColor="@color/secondaryTextColor"
                app:boxStrokeWidth="1dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/regEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:maxLines="1"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionDone"
                    android:textColor="@color/primaryTextColor" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/regNameL"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/enter_name"
                android:textColorHint="@color/secondaryTextColor"
                app:boxCornerRadiusBottomEnd="24dp"
                app:boxCornerRadiusBottomStart="24dp"
                app:boxCornerRadiusTopEnd="24dp"
                app:boxCornerRadiusTopStart="24dp"
                app:boxStrokeColor="@color/secondaryTextColor"
                app:boxStrokeWidth="1dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/regName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:maxLines="1"
                    android:inputType="text"
                    android:imeOptions="actionDone"
                    android:textColor="@color/primaryTextColor" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/regPasswordL"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/enter_password"
                android:textColorHint="@color/secondaryTextColor"
                app:boxCornerRadiusBottomEnd="24dp"
                app:boxCornerRadiusBottomStart="24dp"
                app:boxCornerRadiusTopEnd="24dp"
                app:boxCornerRadiusTopStart="24dp"
                app:boxStrokeColor="@color/secondaryTextColor"
                app:boxStrokeWidth="1dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/regPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:imeOptions="actionDone"
                    android:textColor="@color/primaryTextColor" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/regPasswordCL"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/confirm_password"
                android:textColorHint="@color/secondaryTextColor"
                app:boxCornerRadiusBottomEnd="24dp"
                app:boxCornerRadiusBottomStart="24dp"
                app:boxCornerRadiusTopEnd="24dp"
                app:boxCornerRadiusTopStart="24dp"
                app:boxStrokeColor="@color/secondaryTextColor"
                app:boxStrokeWidth="1dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/regPasswordC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:imeOptions="actionDone"
                    android:textColor="@color/primaryTextColor" />
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:background="@color/primaryTextColor"
                android:layout_marginTop="48dp"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:backgroundTint="@color/primaryTextColor"
                    android:text="@string/create_user"
                    android:id="@+id/regUser"
                    app:rippleColor="@color/light_grey"
                    android:layout_height="wrap_content"/>

                <ProgressBar
                    android:visibility="gone"
                    tools:visibility="visible"
                    android:layout_alignEnd="@id/regUser"
                    android:id="@+id/regProgressBar"
                    android:elevation="8dp"
                    android:indeterminateTint="@color/textColorWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>
            <LinearLayout
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_marginTop="16dp"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:text="@string/already_have_account"
                    android:layout_height="wrap_content"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/regSignIn"
                    android:layout_width="wrap_content"
                    android:text="@string/sign_in"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_marginStart="8dp"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>